# OTAnalytics

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  analysis.ipynb  analysis.py  analysis_OTC_V1-2_prototype.ipynb  auto_counting.prof  build-otc.py  build.py  config.yml  convert_ottrk_to_feather.py  fig.html  install.cmd  install.sh  install_dev.cmd  install_dev.sh  install_prototypes.sh  install_prototypes_windows.cmd  install_windows.cmd  log.txt  object_dic.json  pyproject.toml  requirements-dev.txt  requirements-prototypes.txt  requirements-tools.txt  requirements.txt  requirements_dev.txt  requirements_m1.txt  run.py  run_analysis.sh  setup.cfg  start_gui.cmd  start_gui.sh  test.csv  test_linter.md  update_precommit.py
.github/: CODEOWNERS
.github/workflows/: LoadPlatomoBuildAndBuild.yml  acceptance-test.yml  benchmark.yml  build-nightly.yml  build-release.yml  cicd.yml  claude-code-review.yml  claude.yml  create-distribution-files.yml  create-distribution-latest.yml  create-distribution.yml  linter.yml  main.yml  publish-testpypi.yml  regression-test.yml  release-pypi.yml  release-testpypi.yml  test.yml  update-version.yml
.junie/: guidelines.md
.run/: Scalene-CLI (benchmark).run.xml  Scalene-CLI.run.xml  Start-CLI (benchmark files).run.xml  Start-CLI.run.xml  Start-GUI (mit Benchmarkdaten).run.xml  Start-GUI (mit Testdaten).run.xml  Start-GUI.run.xml  Start-WebUI (mit Testdaten).run.xml  pytest-acceptance-tests.run.xml  pytest-benchmark-tests.run.xml  pytest-in-tests.run.xml  pytest-regression-tests.run.xml  pytest-unit-tests.run.xml
OTAnalytics/: OTAnalytics.bat  OTAnalytics_dict.py  __main__.py  auto_counting.py  canvas_class.py  counting.py  gui.py  gui_dict.py  gui_helper.py  image_alteration.py  install_win_py39.bat  main.py  movement.py  sections.py  statepanel_class.py  test.py  test_transparency.ipynb  toplevel.py  tracks.py  tracks2.py  uml.drawio  version.py  video.py  wrapper_autocount.py
OTAnalytics/Data_Visualization/: dataframe1.pkl  track_viz.py  vizualisation.py
OTAnalytics/adapter_intersect/: intersect.py  mapping.py
OTAnalytics/adapter_ui/: abstract_button_quick_save_config.py  abstract_canvas.py  abstract_frame.py  abstract_frame_canvas.py  abstract_frame_filter.py  abstract_frame_flows.py  abstract_frame_offset.py  abstract_frame_project.py  abstract_frame_remark.py  abstract_frame_section.py  abstract_frame_sections.py  abstract_frame_track_plotting.py  abstract_frame_track_statistics.py  abstract_frame_tracks.py  abstract_item_table.py  abstract_main_window.py  abstract_progressbar_popup.py  abstract_stateful_widget.py  abstract_tracks_frame.py  abstract_treeview.py  abstract_treeview_interface.py  abstract_window.py  cancel_export_counts.py  cancel_export_file.py  default_values.py  dto.py  dummy_viewmodel.py  event_export_dto.py  file_export_dto.py  file_selection_cancelled.py  flow_adapter.py  flow_dto.py  helpers.py  info_box.py  message_box.py  text_resources.py  ui_factory.py  ui_texts.py  view_model.py
OTAnalytics/adapter_visualization/: color_provider.py
OTAnalytics/analyse/: analyse_class.py
OTAnalytics/application/: analysis.py  application.py  config.py  config_specification.py  datastore.py  eventlist.py  exception.py  generate_flows.py  geometry.py  helpers.py  logger.py  logging.py  our_custom_group_exception.py  playback.py  plotting.py  progress.py  project.py  run_configuration.py  state.py  track_filter.py  track_input_source.py
OTAnalytics/autocount/: auto_counting.py
OTAnalytics/count/: auto_counting.py  counting.py
OTAnalytics/domain/: common.py  date.py  event.py  files.py  filter.py  flow.py  geometry.py  intersect.py  observer.py  otc_classes.py  progress.py  remark.py  section.py  tls8plus1_classes.py  track.py  track_dataset.py  track_id_provider.py  track_repository.py  types.py  video.py
OTAnalytics/evaluation/: auto_evaluation.py  compare_gt_cv.py  test2.py
OTAnalytics/helpers/: config.py  file_helper.py  file_helpers.py  test2.py  time_profiling.py
OTAnalytics/plugin_cli/: cli_application.py
OTAnalytics/plugin_datastore/: filter_pandas_track_store.py  filter_polars_track_dataset.py  get_current_frame_track_segments.py  pandas_track_dataset_factory.py  polars_track_id_set.py  polars_track_store.py  python_track_store.py  track_store.py
OTAnalytics/plugin_filter/: dataframe_filter.py  pandas_track_id.py
OTAnalytics/plugin_intersect/: intersect.py  shapely_intersect.py  simple_intersect.py
OTAnalytics/plugin_intersect_parallelization/: multiprocessing.py  ray.py  sequential.py
OTAnalytics/plugin_number_of_tracks_to_be_validated/: calculation_strategy.py  metric_rates_builder.py  otc_classes.py  tracks_as_dataframe_provider.py
OTAnalytics/plugin_parser/: argparse_cli_parser.py  convert_ottrk_to_feathers.py  dataformat_versions.py  export.py  feathers_parser.py  json_parser.py  lazy_parser.py  otconfig_parser.py  ottrk_dataformat.py  otvision_parser.py  pandas_parser.py  road_user_assignment_export.py  streaming_parser.py  track_export.py  track_statistics_export.py
OTAnalytics/plugin_parser_parallelization/: __init__.py  multiprocessing.py  parse_parallelization.py  sequential.py
OTAnalytics/plugin_progress/: lazy_tqdm_progressbar.py  multiprocessing_progress.py  tqdm_progressbar.py
OTAnalytics/plugin_prototypes/: compare_OTC-mio_nms.ipynb  event_count.py  event_visualization.py  example_counter.ipynb  example_event_parser.ipynb  example_manual_count_parser.ipynb  example_signal_program.csv  example_signal_program_mapper.json  example_speed_caculator.ipynb  example_template.ipynb  example_zeitbedarf_calculator.ipynb
OTAnalytics/plugin_track_input_source/: single_batch.py  template.py
OTAnalytics/plugin_ui/: abstract_canvas_background.py  abstract_treeview.py  application.py  application_starter.py  base_application.py  cli.py  (+22 more)
scripts/: check_clean_architecture.py
tests/: benchmark_otanalytics.py  conftest.py  profiling.py  regression_otanalytics.py  test-acceptance.py  test_acceptance.py  test_plotting.py
(+524 files in other folders)
