[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "OTAnalytics"
dynamic = ["dependencies", "version"]
authors = [
  { name="Martin Bärwolff", email="martin.baerwolff@platomo.com" },
  { name="Lars Briem", email="lars.briem@platomo.com" },
  { name="Sebastian Buck", email="sebastian.buck@platomo.com" },
  { name="Michael Heilig", email="michael.heilig@platomo.com" },
  { name="Randy Seng", email="randy.seng@platomo.com" },
  { name="Steven Schlechte", email="steven.schlechte@platomo.com" },
]
description = "OTAnalytics is a core module of the OpenTrafficCam framework to perform traffic analysis on trajectories of road users."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["OpenTrafficCam", "Traffic Analysis", "Traffic Counting"]

[project.urls]
Homepage = "https://opentrafficcam.org/"
Documentation = "https://opentrafficcam.org/overview/"
Repository = "https://github.com/OpenTrafficCam/OTAnalytics"
Issues = "https://github.com/OpenTrafficCam/OTAnalytics/issues"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.version]
path = "OTAnalytics/version.py"

[tool.hatch.build.targets.wheel]
packages = ["OTAnalytics"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
ignore_missing_imports_per_module = true
disallow_untyped_defs = true
