[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "OTAnalytics"
dynamic = ["version"]
authors = [
    { name = "OpenTrafficCam contributors", email = "team@opentrafficcam.org" },
    { name = "platomo GmbH", email = "info@platomo.de" },
]
description = "OTAnalytics is a core module of the OpenTrafficCam framework to perform traffic analysis on trajectories of road users."

readme = "README.md"
requires-python = "==3.12.*"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["OpenTrafficCam", "Traffic Analysis", "Traffic Counting", "Trajectories"]
dependencies = [
    "av==13.0.0",
    "customtkinter==5.2.2",
    "fastapi==0.115.5",
    "ijson==3.3.0",
    "matplotlib==3.10.0",
    "more-itertools==10.7.0",
    "nicegui==2.11.0",
    "numpy==2.1.1",
    "opencv-python-headless==4.10.0.84",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pywin32==310; sys_platform == 'win32'",
    "requests==2.32.4",
    "seaborn==0.13.2",
    "shapely==2.0.7",
    "starlette==0.41.2",
    "tqdm==4.67.1",
    "ujson==5.10.0",
    "uvicorn==0.32.1",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "flake8==7.1.1",
    "interrogate==1.7.0",
    "isort==6.0.1",
    "mypy==1.16.1",
    "pandas-stubs==2.2.3.241126",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-benchmark==5.1.0",
    "pytest-cov==6.0.0",
    "pytest-lazy-fixtures==1.1.2",
    "PyYAML==6.0.2",
    "selenium==4.32.0",
    "twine==6.1.0",
    "yamllint==1.35.1",
]

[project.urls]
Homepage = "https://opentrafficcam.org/"
Documentation = "https://opentrafficcam.org/overview/"
Repository = "https://github.com/OpenTrafficCam/OTAnalytics"
Issues = "https://github.com/OpenTrafficCam/OTAnalytics/issues"
Changelog = "https://github.com/OpenTrafficCam/OTAnalytics/releases"


[tool.hatch.version]
path = "OTAnalytics/version.py"

[tool.hatch.build.targets.wheel]
packages = ["OTAnalytics"]

[tool.hatch.build]
directory = "dist"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
ignore_missing_imports_per_module = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
