[metadata]
name=OTAnalytics

[options]
package_dir=
    =OTAnalytics
packages=find:

[options.packages.find]
where=OTAnalytics
exclude=tests*

[flake8]
max-line-length=88
docstring-convention=google
extend-ignore=E203
exclude=
	venv
	.venv

[isort]
profile=black

[mypy]
plugins = pydantic.mypy
ignore_missing_imports=True
ignore_missing_imports_per_module=True
disallow_untyped_defs=True
